# stackpedia

./: .gitignore
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 20240101000000_init.sql  20240102000000_add_vote_timestamp.sql  20240103000000_stack_updates.sql  20240104000000_bookmarks_and_forks.sql  20240105000000_sponsor_url.sql  20240106000000_unique_nickname.sql  20240107000000_recovery_prefix.sql
server/src/: config.rs  main.rs
server/src/api/: auth.rs  bookmarks.rs  comments.rs  compare.rs  mod.rs  seed.rs  stacks.rs  tools.rs  trending.rs  users.rs
server/src/db/: models.rs  queries.rs
server/src/middleware/: session.rs
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  providers.tsx
web/src/app/[locale]/: layout.tsx  page.tsx
web/src/app/[locale]/bookmarks/: page.tsx
web/src/app/[locale]/compare/: layout.tsx  loading.tsx  page.tsx
web/src/app/[locale]/new/: page.tsx
web/src/app/[locale]/stacks/: page.tsx
web/src/app/[locale]/stacks/[id]/: loading.tsx  page.tsx  stack-detail-client.tsx
web/src/app/[locale]/tools/: page.tsx
web/src/app/[locale]/tools/[name]/: loading.tsx  page.tsx  tool-detail-client.tsx
web/src/app/feed.xml/: route.ts
web/src/components/: auth-modal.tsx  cost-summary.tsx  footer.tsx  header.tsx  keyboard-shortcuts.tsx  locale-link.tsx  pixel-avatar.tsx  stack-card.tsx  vote-button.tsx
web/src/lib/: api.ts  auth-context.tsx  cost-parser.ts  i18n.ts  locale-context.tsx  theme-context.tsx  toast-context.tsx  types.ts  utils.ts
(+3 files in other folders)
